--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/img_work_blog.png" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
