--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+                <img src="./images/img_work_card.png" alt="きらめき太郎様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき太郎様 名刺</h3>
